# QLogger

qlogger/: CMakeLists.txt
qloggerlib/: consoleoutput.cpp  jsonoutput.cpp  textoutput.cpp  xmloutput.cpp
